# team-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.playwright-mcp/: page-2026-05-14T11-11-02-043Z.yml  page-2026-05-14T11-11-25-905Z.yml
alembic/: env.py
alembic/versions/: d05fmgudxt94_initial_schema.py
docs/: ingest-teams-webex.md
examples/mcp/: claude_desktop_config.json
scripts/: smoke_test.sh
specs/: mission.md  roadmap.md  tech-stack.md
specs/2026-05-13-phase-4-mcp-server/: plan.md  requirements.md  validation.md
specs/2026-05-13-phase-5-tier-0-acls/: plan.md  requirements.md  validation.md
specs/2026-05-13-phase-6-teams-webex-ingest/: plan.md  requirements.md  validation.md
src/teamrag/: __init__.py  acl.py  config.py  main.py  retrieval.py
src/teamrag/api/: chat.py  document.py  health.py  query.py
src/teamrag/db/: models.py  session.py
src/teamrag/ingest/: __main__.py  chat_signal.py  chat_thread.py  confluence.py  github.py  pipeline.py  teams.py  webex.py
src/teamrag/mcp_server/: __init__.py  __main__.py  cli.py  gateway_client.py  handlers.py  server.py
tests/: conftest.py
tests/integration/: test_document_endpoint.py  test_mcp_gateway_acl.py  test_mcp_transport_smoke.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase5_tier0_acls.py  test_phase6_teams_webex.py
tests/unit/: test_acl.py  test_chat_thread.py  test_chunking.py  test_chunking_github.py  test_cli_github.py  test_document_url_variants.py  test_github_client.py  test_mcp_handlers.py
(+1 files in other folders)
