[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teamrag"
version = "0.1.0"
description = "Self-hosted RAG system for engineering teams"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.2.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "qdrant-client>=1.9.0",
    "httpx>=0.27.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "markdownify>=0.12.0",
    "llama-index-core>=0.10.0",
    "tenacity>=8.2.0",
    "mcp>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
teamrag-mcp = "teamrag.mcp_server.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
